[project]
name = "motion-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "hidapi>=0.15.0",
    "numpy>=2.3.5",
    "pynput>=1.8.1",
    "rerun-sdk>=0.27.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
]
